--- a/web/reservas/formulario.xhtml
+++ b/web/reservas/formulario.xhtml
@@ -6,16 +6,16 @@
                 xmlns:fnc="http://localhost/fnc"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core">
-
+    <ui:debug hotkey="i" />
     <ui:define name="content">
         Solicitação de Reserva
-        <h:form id="srfo" rendered="#{! solicitacaoViagemController.listingMode}">
+        <h:form id="srfo" rendered="true"> <!-- {! solicitacaoViagemController.listingMode}-->
             Id: <div><h:inputText id="id" value="#{solicitacaoViagemController.solicitacaoviagem.id}" disabled="true" /></div>
             <div><h:inputHidden value="#{solicitacaoViagemController.solicitacaoviagem.id}" /></div>
             Número de pessoas: 
             <div>
                 <h:inputText id="numero" value="#{solicitacaoViagemController.numero}" required="true">
-                    <f:ajax event="valueChange" execute="@this" render="PassData" />
+                    <f:ajax event="blur" execute="@this" render="PassData" />
                 </h:inputText>
             </div>
             Os passageiros são servidores da Unipampa?: <div><h:selectBooleanCheckbox id="servidores" value="#{solicitacaoViagemController.solicitacaoviagem.servidores}" /></div>
@@ -48,7 +48,7 @@
             Percurso: <div><h:inputTextarea id="percurso" value="#{solicitacaoViagemController.solicitacaoviagem.percurso}" rows="15" cols="30" /></div>
             Objetivo da Viagem: <div><h:inputTextarea id="objetivo" value="#{solicitacaoViagemController.solicitacaoviagem.objetivo}" rows="15" cols="30" /></div>
             Passageiros:
-            <h:panelGroup id="passgroup">
+            <!--<h:panelGroup id="passgroup">-->
                 <h:dataTable id="PassData" value="#{solicitacaoViagemController.solicitacaoviagem.passageiros}" var="passageiro">
                     <h:column>
                         <!--<h:panelGroup id="">-->
@@ -71,9 +71,12 @@
                         <div>
                             <h:inputText id="passTel" value="#{passageiro.telefone}" disabled="#{passageiro.disabled}" required="true"/>
                         </div>
+                        <div>
+                            <h:commandButton value="Remover" action="#{solicitacaoViagemController.remover(passageiro)}" />
+                        </div>
                     </h:column>
                 </h:dataTable>
-            </h:panelGroup>
+            <!--</h:panelGroup>-->
             Tipo de Veículo: <div><h:selectOneMenu required="true" id="tipo" value="#{solicitacaoViagemController.veiculoSelect}" >
                     <f:selectItems value="#{solicitacaoViagemController.veiculoss}" var="veiculo" itemLabel="#{veiculo}" />
                 </h:selectOneMenu></div>
@@ -94,7 +97,7 @@
             </div>
         </h:form>
 
-        <h:form rendered="#{solicitacaoViagemController.listingMode}">
+        <h:form rendered="true"> <!-- {solicitacaoViagemController.listingMode}-->
             <h:commandButton value="Solicitar Viagem" action="/reservas/formulario.jsf" />
 
             <h:dataTable id="viagens" rendered="#{! empty solicitacaoViagemController.viagens}" var="viagem" value="#{solicitacaoViagemController.viagens}" >
